# personal-assistant-agent

./: .gitignore  README.md  pyproject.toml
assistant/: __init__.py  agent_core.py  backup.py  calendar_alerts.py  compression.py  context_carry_over.py  disk_monitor.py  launchd.py  llm.py  long_term_memory.py  main.py  notes.py  session_manager.py  session_resolver.py  session_store.py
assistant/interfaces/: __init__.py  discord_bot.py  telegram_bot.py  web_ui.py
assistant/static/: index.html
assistant/storage/: __init__.py
assistant/tools/: __init__.py  calendar.py  code_execution.py  definitions.py  dispatch.py  documents.py  (+3 more)
tests/: __init__.py  test_agent_core.py  test_append_chat_message.py  test_backup.py  test_calendar.py  test_calendar_alerts.py  test_calendar_widget_polling.py  test_code_execution.py  test_compression.py  test_context_carry_over.py  test_cross_interface_continuity.py  test_discord_bot.py  test_disk_monitor.py  test_dispatch.py  test_documents.py  test_fetch_history.py  test_fetch_weather_data.py  test_handle_send_message.py  test_launchd.py  test_long_term_memory.py  test_main.py  test_markdown_to_html.py  test_memo_widget_polling.py  test_notes.py  test_render_history.py  test_render_markdown.py  test_render_weather_success.py  test_render_weather_unavailable.py  test_render_weather_widget.py  test_response_time_sla.py  test_sanitize_html.py  test_searxng.py  test_send_chat_message.py  test_session_id_resolver.py  test_session_manager.py  test_session_store.py  test_static_index.py  test_tasks.py  test_telegram_bot.py  test_weather.py  (+4 more)
