[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-assistant-agent"
version = "0.1.0"
description = "Single-user personal assistant agent with unified multi-interface sessions"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28",
    "pypdf>=6.13.1",
    "pytest>=9.0",
    "pytest-asyncio>=1.4",
    "pytest-cov>=7.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "uvicorn>=0.49.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["assistant"]
omit = ["tests/*"]
